SaveFileToDisk implementation has been added. Permission validation will be done by the wrapper tasks.

--- a/config/config.json
+++ b/config/config.json
@@ -7,5 +7,10 @@
     "password": "tWTUoSQLCjiXk1y5",
     "charset": "utf8mb4",
     "collation": "utf8mb4_general_ci"
+  },
+  "application" : {
+    "drive" : {
+      "documentPath" : "/../drive"
+    }
   }
 }
