composer ext-json .

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "medev-core/slim": "@dev",
-    "medev-auth/slim": "@dev"
+    "medev-auth/slim": "@dev",
+    "ext-json": "*"
   },
   "repositories": [
     {
