--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
+  "determineRouteBeforeAppMiddleware" : true,
   "database": {
     "database_type": "mysql",
     "database_name": "medev_office",
@@ -7,6 +8,10 @@
     "password": "tWTUoSQLCjiXk1y5",
     "charset": "utf8mb4",
     "collation": "utf8mb4_general_ci"
+  },
+  "cors" : {
+    "allowed_origins" : ["https://office.medev.local:3000"],
+    "allowed_headers" : ["Content-Type","Accept","Origin"]
   },
   "application": {
     "drive": {
