--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
     "database_type": "mysql",
     "database_name": "medev_office",
     "server": "localhost",
+	"port" : "3306",
     "username": "medev_office",
     "password": "tWTUoSQLCjiXk1y5",
     "charset": "utf8mb4",
