Notification related config added. View component injected. Composer.json committed.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "medev-core/slim": "@dev",
     "medev-auth/slim": "@dev",
-    "ext-json": "*"
+    "ext-json": "*",
+    "phpmailer/phpmailer": "^6.0"
   },
   "repositories": [
     {
