--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "medev-core/slim": "@dev",
     "medev-auth/slim": "@dev",
     "ext-json": "*",
-    "gumlet/php-image-resize": "^1.9"
+    "gumlet/php-image-resize": "^1.9",
+    "ext-zip": "*"
   },
   "repositories": [
     {
