Folder download endpoint modified to /data from /downlaod. it will be easier on the client side.

--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,7 @@
   },
   "application": {
     "drive": {
-      "documentPath": "/../drive"
+      "documentPath": "drive"
     }
   },
   "authorization": {
